--- a/src/app/module/main/mainGame.html
+++ b/src/app/module/main/mainGame.html
@@ -32,9 +32,9 @@
         </div>
 
         <!-- <div id="grid" class="row mt-4"></div> -->
-        <div id="grid1" class="container">
-            <div class="row my-2 justify-content-center align-items-center">
-                <div class="col-md-auto">
+        <div  class="container">
+            <div class="row my-2 justify-content-center align-items-center" id="grid">
+                <!-- <div class="col-md-auto">
                     <div class="card">
                         <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
                             class="card-img-top">
@@ -69,83 +69,7 @@
                         <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
                             class="card-img-top">
                     </div>
-                </div>
-            </div>
-            <div class="row my-2 justify-content-center align-items-center">
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/canhvang.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/chanhxanh.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/dau.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/luu.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-            </div>
-            <div class="row my-2 justify-content-center align-items-center">
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/canhvang.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/chanhxanh.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/dau.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/luu.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
-                <div class="col-md-auto">
-                    <div class="card">
-                        <img src="../../../assets/images/cam.png" alt="Pikachu" width="auto" height="120"
-                            class="card-img-top">
-                    </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -158,11 +82,13 @@
         </div>
 
     </div>
+
+    <script src="../../model/app.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="app.js"></script>
 </body>
 
 </html>
