--- a/src/app/module/login/login.component.html
+++ b/src/app/module/login/login.component.html
@@ -44,18 +44,18 @@
 
                                 <div class="mb-md-5 mt-md-4 pb-5">
 
-                                    <h2 class="fw-bold mb-2 text-uppercase title-font">Find Game</h2>
-                                    <p class="text-white-50 mb-5">Please enter true game!</p>
+                                    <h2 class="fw-bold mb-2 text-uppercase title-font">Fruit Similar Game</h2>
+                                    <p class="text-white-50 mb-5">Games are interesting, funny and relaxing!</p>
 
                                     <div class="form-outline form-white mb-4">
-                                        <label class="form-label" for="gameName">Name games</label>
+                                        <label class="form-label" for="gameName">Nickname</label>
                                         <input type="text" id="gameName" class="form-control form-control-lg"
-                                            placeholder="Enter input name game!" />
+                                            placeholder="Enter input nickname!" />
                                         <div class="errorMessage float-sm-start my-2"></div>
-                                        <!-- Thêm một phần tử để giữ chỗ cho thông báo lỗi, nhưng không hiển thị mặc định -->
+                        
                                         <div class="errorMessagePlaceholder"></div>
                                     </div>
-                                    <button type="submit" class="btn btn-outline-light btn-lg px-5 ">Find Game</button>
+                                    <button type="submit" class="btn btn-outline-light btn-lg px-5 ">Xác nhận</button>
 
 
                                 </div>
