Làm lại chức năng chơi game
Lúc vào trang thì các ảnh sẽ trộn random và ẩn ảnh, sau khi chọn cặp ảnh đúng sẽ tô xanh và không cho click, chọn 2 ảnh sai thì sẽ tô đỏ, sau khi hoản thành trò chơi sẽ thông báo và reset lại màn chơi

--- a/src/app/module/login/login.component.html
+++ b/src/app/module/login/login.component.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pikachu Game</title>
+    <title>Fruit Similar Game</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+
+    <link rel="icon" href="../../../assets/images/logo.png" type="image/x-icon" />
+
 
     <style>
         .gradient-custom {
