--- a/src/app/module/main/mainGame.html
+++ b/src/app/module/main/mainGame.html
@@ -19,14 +19,14 @@
         <div class="text-center">
             <div class="row justify-content-center">
                 <div class="col-md-auto">
-                    <button class="btn btn-primary">Start Game</button>
-                    <button class="btn btn-warning">Reset Game</button>
+                    <button class="btn btn-primary start">Start Game</button>
+                    <button class="btn btn-warning restart">Reset Game</button>
                     <button class="btn btn-danger">Exit Game</button>
                 </div>
             </div>
             <div class="row justify-content-center mt-2">
                 <div class="col-md-auto">
-                    <button class="btn btn-outline-warning">Score: 100</button>
+                    <button class="btn btn-outline-warning score">Score: 0</button>
                 </div>
             </div>
         </div>
