--- a/src/app/module/main/mainGame.html
+++ b/src/app/module/main/mainGame.html
@@ -21,7 +21,7 @@
                 <div class="col-md-auto">
                     <button class="btn btn-primary start">Start Game</button>
                     <button class="btn btn-warning restart">Reset Game</button>
-                    <button class="btn btn-danger">Exit Game</button>
+                    <button class="btn btn-danger exit">Exit Game</button>
                 </div>
             </div>
             <div class="row justify-content-center mt-2">
@@ -34,6 +34,11 @@
         <!-- <div id="grid" class="row mt-4"></div> -->
         <div  class="container">
             <div class="row my-2 justify-content-center align-items-center" id="grid">
+                <!-- <div class="col-md-2">
+                    <div class="card" onclick="toggleImageSize(this)" isOpen="false">
+                        <img src="../../../assets/images/${imageUrl}" alt="Fruit" width="120" height="120" class="card-img-top hidden">
+                    </div>
+                </div> -->
             </div>
 
         </div>
