--- a/src/app/module/main/mainGame.html
+++ b/src/app/module/main/mainGame.html
@@ -66,9 +66,9 @@
       </div>
     </div>
 
-    <script src="../../model/app.js"></script>
+    <!-- <script src="../../model/app.js"></script> -->
 
-    <!-- <script src="../../../../dist/app/model/app.js"></script> -->
+    <script src="../../../../dist/app/model/app.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
